k8s/url-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-depl
spec:
  selector:
    matchLabels:
      app: url-depl
  template:
    metadata:
      labels:
        app: url-depl
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "url-depl"
        dapr.io/app-port: "3000"
        dapr.io/config: "tracing"
        dapr.io/log-level: "debug"
    spec:
      containers:
      - name: url-depl
        image: url-service
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "125m"
        ports:
        - containerPort: 3000
