k8s/postgres-posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-posts-depl
spec:
  selector:
    matchLabels:
      app: postgres-posts-depl
  template:
    metadata:
      labels:
        app: postgres-posts-depl
    spec:
      containers:
      - name: postgres-posts-depl
        image: postgres:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "125m"
        ports:
        - containerPort: 5432
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-posts-srv
spec:
  selector:
    app: postgres-posts-depl
  ports:
  - port: 5432
    targetPort: 5432
