k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  selector:
    matchLabels:
      app: posts-depl
  template:
    metadata:
      labels:
        app: posts-depl
    spec:
      containers:
      - name: posts-depl
        image: k3d-registry.localhost:5000/posts-service
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: ClusterIP
  selector:
    app: posts-depl
  ports:
  - port: 80
    targetPort: 80
