k8s/redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-depl
spec:
  selector:
    matchLabels:
      app: redis-depl
  template:
    metadata:
      labels:
        app: redis-depl
    spec:
      containers:
      - name: redis-depl
        image: redis:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: redis-srv
spec:
  type: ClusterIP
  selector:
    app: redis-depl
  ports:
  - port: 6379
    targetPort: 6379
