k8s/zipkin-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-depl
spec:
  selector:
    matchLabels:
      app: zipkin-depl
  template:
    metadata:
      labels:
        app: zipkin-depl
    spec:
      containers:
      - name: zipkin-depl
        image: openzipkin/zipkin
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9411

---

apiVersion: v1
kind: Service
metadata:
  name: zipkin-srv
spec:
  selector:
    app: zipkin-depl
  ports:
  - port: 9411
    targetPort: 9411
