k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /posts
        pathType: Prefix
        backend:
          service:
            name: posts-srv
            port:
              number: 80
      - path: /zipkin
        pathType: Prefix
        backend:
          service:
            name: zipkin-srv
            port:
              number: 9411
      - path: /jaeger
        pathType: Prefix
        backend:
          service:
            name: jaeger-operator-srv
            port:
              number: 16686
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-srv
            port:
              number: 8080
